# guardmypi

./: .gitattributes  .gitignore  CMakeLists.txt  Human_motion.cpp  LICENSE  README.md  Unlock.cpp  cascade.xml  cascade_original.xml  cascadelbp.xml  eigen.yml  eigensmall.yml  eigentrain.cpp  facerec.cpp  facereg  facialrecognition.cpp  facreg  guardingthepi.yml  guardmypi.cpp  guardmypi.h  human_detection.cpp  humandetectioncode.cpp  humanpetdetectioncode.cpp  main.cpp  motdetection.cpp  newmain.cpp  package-lock.json  package.json  test.yml  train.csv  unlockQRcode.cpp
Development/: CMakeLists.txt  Test  guardmypi.cpp  test.cpp
docs/: _about.html  _build.html  _build_8md.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _hardware.html  _human__motion_8cpp.js  _human__motion_8cpp__incl.dot  _human__motion_8cpp__incl.md5  _mainpage_8md.html  _object_detection-_y_o_l_o_2_r_e_a_d_m_e_8md.html  _unlock_8cpp.html  annotated.html  annotated_dup.js  classCamera__coll__graph.dot  classCamera__coll__graph.md5  classMotionDetect-members.html  class_camera-members.html  class_camera.html  class_camera__coll__graph.md5  class_camera__inherit__graph.md5  class_human_detector-members.html  class_human_detector.js  class_lock.html  class_unlock-members.html  class_unlock.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_017ad5e908c41501f6a06b5119b37293.js  dir_1d2fc0069baaae505630d7cfc4592fdc.html  dir_2201e631f213d3d83903011c80bd31a6.html  dir_48ea85d153c58800f79bb6a5e66dd1f3.html  dir_48ea85d153c58800f79bb6a5e66dd1f3.js  (+49 more)
(+217 files in other folders)
