cmake_minimum_required(VERSION 2.8)
project(newmain )
find_package( OpenCV REQUIRED )
add_subdirectory (Development)
include_directories( ${OpenCV_INCLUDE_DIRS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
enable_testing()
add_library (gmp guardmypi.cpp guardmypi.h)
add_executable( main main.cpp)
target_link_libraries( main gmp ${OpenCV_LIBS} )
add_test (Name Test COMMAND Test)
